# vscode-python-template

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: code-quality.yaml  lint.yaml  reviewdog.yaml  reviewdog.yml
src/: test_main.py
