[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Seijiro Ozawa  <seijiro4751@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version="3.11"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 120
